--- a/style.css
+++ b/style.css
@@ -65,6 +65,11 @@ body {
     font-family: 'Lexend Deca', sans-serif;
 }
 
+.more:hover {
+    cursor: pointer;
+    background-color: hsl(0, 0%, 80%);
+}
+
 @media screen and (max-width: 800px) {
     .container {
         flex-wrap: wrap;
