--- a/style.css
+++ b/style.css
@@ -8,15 +8,14 @@ body {
     background-color: hsl(0, 0%, 95%);
     display: flex;
     justify-content: center;
+    font-size: 15px;
 }
 
 .container {
-    position: absolute;
-    top: 12vh;
-    background-color: blue;
+    margin-top: 12vh;
     display: flex;
     flex-direction: row;
-    width: 60%;
+    width: 62%;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -36,18 +35,18 @@ body {
     background-color: hsl(179, 100%, 13%);
 }
 
-.container h2 {
+.container h1 {
     padding: 20px;
     color: hsl(0, 0%, 95%);
     font-family: 'Big Shoulders Display', cursive;
 }
 
 .container svg {
-    padding: 20px;
+    margin: 20px;
 }
 
 .paragraph {
-    padding: 10px;
+    margin: 20px;
     color: hsla(0, 0%, 100%, 0.75);
     font-family: 'Lexend Deca', sans-serif;
 }
@@ -57,17 +56,19 @@ body {
     height: 10%;
     border: none;
     border-radius: 20px;
-    margin: 15px;
-    margin-bottom: 50px;
-    margin-top: 40px;
+    margin: 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
     background-color: hsl(0, 0%, 95%);
     mix-blend-mode: screen;
     font-family: 'Lexend Deca', sans-serif;
+    transition: 0.2s all;
 }
 
 .more:hover {
     cursor: pointer;
     background-color: hsl(0, 0%, 80%);
+    transform: scale(1.05,1.05);
 }
 
 @media screen and (max-width: 800px) {
