--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     min-width: 0;
+    font-size: roboto;
 }
 
 body {
@@ -38,7 +39,7 @@ body {
 .container h1 {
     padding: 20px;
     color: hsl(0, 0%, 95%);
-    font-family: 'Big Shoulders Display', cursive;
+    font-family: 'Big Shoulders Display';
 }
 
 .container svg {
